add css3 animation test

--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+          <title>无聊</title>
+          <meta name="apple-mobile-web-app-title" content="无聊"/>
+          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
+
+          
+          <meta name="apple-mobile-web-app-capable" content="yes" /> 
+          <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+          <meta name="keywords" content="无聊,杀时间,搞笑,美文"/>
+          <meta name="description" content="每天，一个人至少有三个小时处在无聊的状态中。你，无聊吗？在这里，音乐、美文、电台、漫画、虐心游戏、搞笑视频等随机出现，简单分享只为让无聊更有料！" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
         <script src="js/main.js" type="text/javascript"></script>
     </head>
     <body>
-        <p>修改css路径和js路径下的代码会在浏览器重新加载</p>
+        <iframe 
+            id="youku_video"
+            style="width: 100%; height: 400px; "
+            src="http://player.youku.com/embed/XMjYwODUyMjMy" 
+            frameborder="0"
+            scrolling="auto" 
+            allowfullscreen >
+        </iframe>
+        <script type="text/javascript">
+            (function(){
+            var p = {
+            url:location.href, /*获取URL，可加上来自分享到QQ标识，方便统计*/
+            desc:'', /*分享理由(风格应模拟用户对话),支持多分享语随机展现（使用|分隔）*/
+            title:'', /*分享标题(可选)*/
+            summary:'', /*分享摘要(可选)*/
+            pics:'', /*分享图片(可选)*/
+            flash: '', /*视频地址(可选)*/
+            site:'', /*分享来源(可选) 如：QQ分享*/
+            style:'201',
+            width:32,
+            height:32
+            };
+            var s = [];
+            for(var i in p){
+            s.push(i + '=' + encodeURIComponent(p[i]||''));
+            }
+            document.write(['<a class="qcShareQQDiv" href="http://connect.qq.com/widget/shareqq/index.html?',s.join('&'),'" target="_blank">分享到QQ</a>'].join(''));
+            })();
+            </script>
+            <script src="http://connect.qq.com/widget/loader/loader.js" widget="shareqq" charset="utf-8"></script>
     </body>
 </html>
